fix: add dark mode on theme editor and scrollbar variables

--- a/docs/styles.css
+++ b/docs/styles.css
@@ -13,6 +13,38 @@ html {
   box-sizing: inherit;
 }
 
+input[type="range"] {
+  -webkit-appearance: none; /* Hides the slider so that custom slider can be made */
+  width: 100%; /* Specific width is required for Firefox. */
+  background: transparent; /* Otherwise white in Chrome */
+  height: var(--j-size-md);
+}
+
+input[type="range"]:focus {
+  outline: none; /* Removes the blue border. You should probably do some kind of focus styling for accessibility reasons though. */
+}
+
+/* Input Thumb */
+input[type="range"]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  height: 20px;
+  width: 20px;
+  border-radius: var(--j-border-radius);
+  background: var(--j-color-primary-500);
+  cursor: ew-resize;
+  transition: background 0.3s ease-in-out;
+  margin-top: -8px;
+}
+
+input[type="range"]::-webkit-slider-runnable-track {
+  -webkit-appearance: none;
+  box-shadow: none;
+  border-radius: var(--j-border-radius);
+  border: 0;
+  background: var(--j-color-ui-50);
+  height: 8px;
+}
+
 .hljs {
   display: inline-block !important;
   max-width: 100%;
